Minor refactoring and deserialization added

--- a/src/Osu.Music.Services/Osu.Music.Services.csproj
+++ b/src/Osu.Music.Services/Osu.Music.Services.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Osu.Music.Common\Osu.Music.Common.csproj" />
+  </ItemGroup>
+
 </Project>
