--- a/src/Osu.Music.Services/Osu.Music.Services.csproj
+++ b/src/Osu.Music.Services/Osu.Music.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HoLLy.osu.DatabaseReader" Version="3.0.0" />
     <PackageReference Include="NAudio" Version="2.0.1" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
   </ItemGroup>
