--- a/src/Osu.Music.UI/Osu.Music.UI.csproj
+++ b/src/Osu.Music.UI/Osu.Music.UI.csproj
@@ -25,6 +25,7 @@
     <None Remove="Resources\Fonts\Roboto\Roboto-Regular.ttf" />
     <None Remove="Resources\Fonts\Roboto\Roboto-Thin.ttf" />
     <None Remove="Resources\Fonts\Roboto\Roboto-ThinItalic.ttf" />
+    <None Remove="Resources\Images\SidebarBackground.jpg" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
@@ -50,5 +51,6 @@
     <Resource Include="Resources\Fonts\Roboto\Roboto-Regular.ttf" />
     <Resource Include="Resources\Fonts\Roboto\Roboto-Thin.ttf" />
     <Resource Include="Resources\Fonts\Roboto\Roboto-ThinItalic.ttf" />
+    <Resource Include="Resources\Images\SidebarBackground.jpg" />
   </ItemGroup>
 </Project>
