Overengineered Settings with MVVM support

--- a/src/Osu.Music.Common/Osu.Music.Common.csproj
+++ b/src/Osu.Music.Common/Osu.Music.Common.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Prism.Core" Version="8.1.97" />
+  </ItemGroup>
+
 </Project>
