--- a/src/Osu.Music/Osu.Music.csproj
+++ b/src/Osu.Music/Osu.Music.csproj
@@ -10,6 +10,7 @@
     <Description>Simple player for your osu! library.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <AssemblyVersion>0.1.5.22</AssemblyVersion>
+    <StartupObject>Osu.Music.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Prism.DryIoc" Version="8.0.0.1909" />
