--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-# Name of website
-title: osu.Music
-
+title: Cayman theme
+description: Cayman is a clean, responsive theme for GitHub Pages.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-cayman
