--- a/src/Osu.Music.UI/Osu.Music.UI.csproj
+++ b/src/Osu.Music.UI/Osu.Music.UI.csproj
@@ -25,6 +25,7 @@
     <None Remove="Resources\Fonts\Roboto\Roboto-Regular.ttf" />
     <None Remove="Resources\Fonts\Roboto\Roboto-Thin.ttf" />
     <None Remove="Resources\Fonts\Roboto\Roboto-ThinItalic.ttf" />
+    <None Remove="Resources\Images\Logo\Logo.png" />
     <None Remove="Resources\Images\osu-logo.png" />
     <None Remove="Resources\Images\sidebar-background.png" />
   </ItemGroup>
@@ -54,6 +55,12 @@
     <Resource Include="Resources\Fonts\Roboto\Roboto-Regular.ttf" />
     <Resource Include="Resources\Fonts\Roboto\Roboto-Thin.ttf" />
     <Resource Include="Resources\Fonts\Roboto\Roboto-ThinItalic.ttf" />
+    <Resource Include="Resources\Images\Logo\Logo.png" />
     <Resource Include="Resources\Images\sidebar-background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Resources\Static\licenses.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
