--- a/src/Osu.Music.Services/Osu.Music.Services.csproj
+++ b/src/Osu.Music.Services/Osu.Music.Services.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="NAudio" Version="2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
+    <PackageReference Include="squirrel.windows" Version="1.9.0" />
   </ItemGroup>
 
   <ItemGroup>
