--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: osu.Music
 description: Simple music player for your osu! library.
-show_downloads: true
+show_downloads: false
 github.exe_url: https://github.com/Laritello/osu-music/releases/download/0.2.6/Setup.exe
 
 remote_theme: pages-themes/cayman@v0.2.0
