--- a/src/Osu.Music.Services/Osu.Music.Services.csproj
+++ b/src/Osu.Music.Services/Osu.Music.Services.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DiscordRichPresence" Version="1.0.175" />
     <PackageReference Include="HoLLy.osu.DatabaseReader" Version="3.0.0" />
     <PackageReference Include="NAudio" Version="2.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
