--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,6 @@ github:
   zip_url: https://github.com/Laritello/osu-music/releases/download/0.2.6/Setup.exe
 
 #remote_theme: pages-themes/cayman@v0.2.0
-remote_theme: sylhare/Type-on-Strap
+remote_theme: sylhare/Type-on-Strap@v2.3.9
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
