Added Dialog Service
- New Dependency: Material Design Themes 4.5.0
- New Thanks: https://gist.github.com/Andy1666/03a5ccb98603aa7241e04f976382050b

--- a/src/Osu.Music/Osu.Music.csproj
+++ b/src/Osu.Music/Osu.Music.csproj
@@ -11,6 +11,7 @@
 	<StartupObject>Osu.Music.App</StartupObject>
 	</PropertyGroup>
 	<ItemGroup>
+	<PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
 	<PackageReference Include="NuGet.CommandLine" Version="5.11.0">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
