--- a/src/Osu.Music.UI/Osu.Music.UI.csproj
+++ b/src/Osu.Music.UI/Osu.Music.UI.csproj
@@ -30,6 +30,7 @@
     <None Remove="Resources\Images\sidebar-background.png" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.37" />
     <PackageReference Include="PixiEditor.ColorPicker" Version="3.1.0" />
     <PackageReference Include="Prism.Wpf" Version="8.1.97" />
