--- a/src/Osu.Music.Services/Osu.Music.Services.csproj
+++ b/src/Osu.Music.Services/Osu.Music.Services.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="DiscordRichPresence" Version="1.0.175" />
-    <PackageReference Include="HoLLy.osu.DatabaseReader" Version="3.0.0" />
+    <PackageReference Include="HoLLy.osu.DatabaseReader" Version="3.1.0-alpha1" />
     <PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
     <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
