--- a/src/Osu.Music.Common/Osu.Music.Common.csproj
+++ b/src/Osu.Music.Common/Osu.Music.Common.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HoLLy.osu.DatabaseReader" Version="3.1.0-alpha1" />
     <PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
     <PackageReference Include="NAudio" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
