--- a/src/Osu.Music.UI/Osu.Music.UI.csproj
+++ b/src/Osu.Music.UI/Osu.Music.UI.csproj
@@ -13,6 +13,25 @@
     <None Remove="Resources\Fonts\MaterialIconsOutlined-Regular.otf" />
     <None Remove="Resources\Fonts\MaterialIconsRound-Regular.otf" />
     <None Remove="Resources\Fonts\MaterialIconsSharp-Regular.otf" />
+    <None Remove="Resources\Fonts\Poppins\OFL.txt" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-Black.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-BlackItalic.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-Bold.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-BoldItalic.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-ExtraBold.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-ExtraBoldItalic.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-ExtraLight.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-ExtraLightItalic.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-Italic.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-Light.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-LightItalic.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-Medium.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-MediumItalic.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-Regular.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-SemiBold.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-SemiBoldItalic.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-Thin.ttf" />
+    <None Remove="Resources\Fonts\Poppins\Poppins-ThinItalic.ttf" />
     <None Remove="Resources\Fonts\Roboto\Roboto-Black.ttf" />
     <None Remove="Resources\Fonts\Roboto\Roboto-BlackItalic.ttf" />
     <None Remove="Resources\Fonts\Roboto\Roboto-Bold.ttf" />
@@ -44,6 +63,25 @@
     <Resource Include="Resources\Fonts\Material Icons\MaterialIconsOutlined-Regular.otf" />
     <Resource Include="Resources\Fonts\Material Icons\MaterialIconsRound-Regular.otf" />
     <Resource Include="Resources\Fonts\Material Icons\MaterialIconsSharp-Regular.otf" />
+    <Resource Include="Resources\Fonts\Poppins\OFL.txt" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-Black.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-BlackItalic.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-Bold.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-BoldItalic.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-ExtraBold.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-ExtraBoldItalic.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-ExtraLight.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-ExtraLightItalic.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-Italic.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-Light.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-LightItalic.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-Medium.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-MediumItalic.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-Regular.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-SemiBold.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-SemiBoldItalic.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-Thin.ttf" />
+    <Resource Include="Resources\Fonts\Poppins\Poppins-ThinItalic.ttf" />
     <Resource Include="Resources\Fonts\Roboto\Roboto-Black.ttf" />
     <Resource Include="Resources\Fonts\Roboto\Roboto-BlackItalic.ttf" />
     <Resource Include="Resources\Fonts\Roboto\Roboto-Bold.ttf" />
