--- a/src/Osu.Music.UI/Osu.Music.UI.csproj
+++ b/src/Osu.Music.UI/Osu.Music.UI.csproj
@@ -78,4 +78,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Validation\" />
+  </ItemGroup>
 </Project>
