--- a/src/Osu.Music.UI/Osu.Music.UI.csproj
+++ b/src/Osu.Music.UI/Osu.Music.UI.csproj
@@ -32,12 +32,14 @@
     <None Remove="Resources\Fonts\Poppins\Poppins-SemiBoldItalic.ttf" />
     <None Remove="Resources\Fonts\Poppins\Poppins-Thin.ttf" />
     <None Remove="Resources\Fonts\Poppins\Poppins-ThinItalic.ttf" />
+    <None Remove="Resources\Images\Logo\Logo.ico" />
     <None Remove="Resources\Images\Logo\Logo.png" />
     <None Remove="Resources\Images\osu-logo.png" />
     <None Remove="Resources\Images\sidebar-background.png" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FamFamFam.Flags.Wpf" Version="1.2.1" />
+    <PackageReference Include="Hardcodet.NotifyIcon.Wpf" Version="1.1.0" />
     <PackageReference Include="MaterialDesignThemes" Version="4.8.0" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
     <PackageReference Include="Prism.DryIoc" Version="8.1.97" />
@@ -71,6 +73,7 @@
     <Resource Include="Resources\Fonts\Poppins\Poppins-SemiBoldItalic.ttf" />
     <Resource Include="Resources\Fonts\Poppins\Poppins-Thin.ttf" />
     <Resource Include="Resources\Fonts\Poppins\Poppins-ThinItalic.ttf" />
+    <Resource Include="Resources\Images\Logo\Logo.ico" />
     <Resource Include="Resources\Images\Logo\Logo.png" />
     <Resource Include="Resources\Images\sidebar-background.png" />
   </ItemGroup>
